fixed scrollbar issue on gallery

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -84,7 +84,7 @@
 }
 
 #overlay #main {
-  width: 80%;
+  width: calc(100vw - 20%);
   height: 100%;
   min-height: 100%;
   overflow-y: scroll;
@@ -125,7 +125,7 @@
 #nextButton,
 #prevButton {
   height: 100%;
-  width: 3em;
+  width: 10%;
   display: flex;
   display: -webkit-flex;
   display: -moz-flex;
@@ -194,7 +194,6 @@
 
 @media only screen and (max-width: 1500px) {
   #overlay #main {
-    width: 75%;
     height: 100%;
     min-height: 100%;
     overflow-y: scroll;
@@ -233,6 +232,7 @@
   #overlay #main {
     width: 100%;
   }
+
   #nextButton,
   #prevButton {
     display: none;
